Correct overlaping thumbs

--- a/src/plugin/o-slider.scss
+++ b/src/plugin/o-slider.scss
@@ -80,6 +80,10 @@
       --slider-color: var(--slider-color-dark);
       z-index: 10;
     }
+
+    &[data-priority='true'] {
+      z-index: 5;
+    }
   }
 
   &__tip {
